# reason-fontkit

./: .gitignore  .travis.yml  README.md  azure-pipelines.yml  package.json
.ci/: azure-pipelines.yml  esy-build-steps.yml
bin_native/: dune  test_fontkit.re  test_fontkit.re.rej  test_freetype.re
esy.lock/: index.json
src/: Font.re  FontKit.re  Fontkit.re  Fontkit.re.rej  FreeType_Bindings.re  dune  fontkit-lib.compiled.js  fontkit-lib.js  fontkit.cpp  fontkit.cpp.rej  fontkit.js  freetype.cpp  freetype.re  package.json  test.re
src/config/: discover.ml
