(executable
    (name test_fontkit)
    (package fontkit-example)
    (preprocess (pps lwt_ppx))
    (public_name test_fontkit)
    (libraries
        bigarray
        lwt
        lwt.unix
        reglfw
        fontkit
            ))

(install
    (package fontkit-example)
    (section bin)
    (files Roboto-Regular.ttf image4.jpg))
